# sdl3_gpu_msdf_text

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat  generate_fonts.bat  generate_shaders.bat  project.raddbg_project
resources/source/shaders/: text_batch.frag.hlsl  text_batch.vert.hlsl
src/: common.cpp  common.hpp  defer.hpp  demo_strings.cpp  font_atlas.cpp  font_atlas.hpp  imgui_font.cpp  imgui_font.hpp  main.cpp  pch.hpp  sdl3_gpu_msdf_text.cpp  text_batch.cpp  text_batch.hlsl  text_batch.hpp
